# foxbot_ros

./: CMakeLists.txt  README.md  package.xml
launch/: foxbot_core.launch  foxbot_navigation.launch  foxbot_navigation_amcl.launch  foxbot_navigation_cartographer.launch  move_base.launch
maps/: losserand_v4_2_num_accumulated_range_data_3.pgm  losserand_v4_2_num_accumulated_range_data_3.yaml  losserand_v7_1_res003_wo_odom.pgm  losserand_v7_1_res003_wo_odom.yaml
param/: base_local_planner_params.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/: docking.cpp  image_converter.py  odom_calib.cpp  odom_calib.h
urdf/: foxbot.urdf
